--- a/client/app/home/welcome.component.html
+++ b/client/app/home/welcome.component.html
@@ -1,5 +1,6 @@
 ﻿
-<div class="container">    
-    <input type="text" [(ngModel)]='searchText' />
-    <button class="btn btn-default" (click)='search()'>Search</button>    
+<div class="jumbotron">
+  <h1>Game disks online</h1>
+  <p>...</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 </div>
